# python-sec-bootstrapper

./: .gitignore  AI_FRAMEWORK_MODULES.md  ARCHITECTURE.md  CONFIG_SCHEMA.md  DISTRO_SUPPORT_MATRIX.md  LICENSE  MODULE_INVENTORY.md  PHASE_EXECUTION_FLOW.md  README.md  ROLLBACK_AND_FAILURE_MODEL.md  easy_bootstrap.py  easy_bootstrap.sh  pyproject.toml  requirements.txt
config/: config.fast.yaml  config.local.yaml  config.yaml  tools_manifest.yaml
sec_bootstrapper/: __init__.py
sec_bootstrapper/cli/: main.py
sec_bootstrapper/core/: __init__.py  base.py  config.py  debloat.py  distro.py  manifest.py  rollback.py  stage_gate.py  tool_cache.py
sec_bootstrapper/modules/: __init__.py  ai_frameworks.py  clamav.py  common.py  dev_runtime_tools.py  docker_ai_validation.py  docker_baseline.py  docker_prereq.py  fail2ban.py  firejail.py  firewall.py  local_key_prep.py  lynis.py  rkhunter.py  ssh_hardening.py  system_baseline.py  system_hardening.py  system_packages.py  tailscale.py  unattended_upgrades.py  user_setup.py
tests/integration/: test_modules.py
tests/unit/: test_debloat.py  test_local_key_prep.py  test_system_baseline.py
